# BioSim

./: Makefile  conf.py  requirements.txt  setup.cfg  tox.ini
_build/doctrees/: environment.pickle  index.doctree
_build/doctrees/doc/: index.doctree  island.doctree
_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
_build/html/_modules/: index.html
_build/html/_modules/biosim/: island.html
_build/html/_sources/: index.rst.txt
_build/html/_sources/doc/: index.rst.txt
_build/html/doc/: index.html  island.html
doc/: animal.rst  api_references.rst  conf.py  make.bat  modules.rst
doc/_build/doctrees/: animal.doctree  api_reference.doctree  api_references.doctree  conf.doctree  environment.pickle  index.doctree  island.doctree  modules.doctree  setup.doctree  tests.doctree
doc/_build/html/: animal.html  api_reference.html  api_references.html  conf.html  genindex.html  index.html  island.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  setup.html  tests.html
doc/_build/html/_modules/: index.html
doc/_build/html/_sources/: index.rst.txt  island.rst.txt  tests.rst.txt
doc/_build/html/_static/: documentation_options.js
examples/: check_sim.py  file_used_to_sim_different_islands.py  project.avi
src/biosim/: 2cell.py  2rossum.py  __init__.py  animal.py  island.py  island_to.py  landscape.py  nature.py  project.avi  rossum.py  rossum_to.py  simulation.py  simulation_to.py
tests/: test_biosim_interface.py  test_rossum.py
(+5 files in other folders)
