[metadata]
name = biosim
description = A population dynamics simulation written in Python
long_description = file: README.rst
author = Markus Ola Granheim & Rasmus Svebestad
author_email = mgranhei@nmbu.no & rasmus.svebestad@nmbu.no

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
    matplotlib
    numpy
    pandas
    opencv-python

[options.packages.find]
where=src